[4989923] Correção do erro no cadastro de observações

--- a/coi-management-web/src/main/resources/laudo-pos.jrxml
+++ b/coi-management-web/src/main/resources/laudo-pos.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="laudo" pageWidth="595" pageHeight="850" columnWidth="523" leftMargin="36" rightMargin="36" topMargin="36" bottomMargin="36" uuid="45665aca-12e0-4f2c-9fae-7ca7cac9881d">
 	<property name="ireport.zoom" value="1.6105100000000014"/>
-	<property name="ireport.x" value="48"/>
-	<property name="ireport.y" value="336"/>
+	<property name="ireport.x" value="0"/>
+	<property name="ireport.y" value="262"/>
 	<subDataset name="observacoesDataSet" uuid="a1b1d00d-5058-4f57-ab0f-85940a55f13d">
 		<field name="codigo" class="java.lang.Integer"/>
 		<field name="descricao" class="java.lang.String"/>
@@ -107,8 +107,8 @@
 				<text><![CDATA[Os critérios para classificação dos achados densitométricos são baseados na orientação da Organização Mundial de Saúde de 1994 e devem ser utilizados para mulheres nos períodos de transição menopausal ou pós-menopausal e para homens com idade superior ou igual a 50 anos:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="110" width="523" height="50" uuid="84ecfab6-b4e6-4544-b26e-1cebbb4ccb9f"/>
-				<textElement>
+				<reportElement x="0" y="110" width="523" height="50" uuid="d01cedac-a2cc-49c9-9755-b41a18742638"/>
+				<textElement markup="none">
 					<font isPdfEmbedded="false"/>
 				</textElement>
 				<text><![CDATA[-Índice T-score >= -1 DP = NORMAL
@@ -123,7 +123,7 @@
 				<text><![CDATA[DESCRIÇÃO DO EXAME ATUAL:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="180" width="178" height="20" uuid="b431e149-3336-49eb-9840-74df66cfa46f"/>
+				<reportElement x="0" y="180" width="165" height="20" uuid="b431e149-3336-49eb-9840-74df66cfa46f"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -135,7 +135,7 @@
 				<text><![CDATA[Local]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="178" y="180" width="110" height="20" uuid="6b6aa5b2-609f-468e-9e27-f4fb2cd034d0"/>
+				<reportElement x="165" y="180" width="110" height="20" uuid="6b6aa5b2-609f-468e-9e27-f4fb2cd034d0"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -147,7 +147,7 @@
 				<text><![CDATA[Densidade (g/cm²)]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="288" y="180" width="50" height="20" uuid="b5b01ddd-0dc4-4cc0-9d05-6a57dae203e2"/>
+				<reportElement x="275" y="180" width="50" height="20" uuid="b5b01ddd-0dc4-4cc0-9d05-6a57dae203e2"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -159,7 +159,7 @@
 				<text><![CDATA[T-score]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="338" y="180" width="50" height="20" uuid="8ad28ef5-2649-4513-8898-238e4d542b60"/>
+				<reportElement x="325" y="180" width="50" height="20" uuid="8ad28ef5-2649-4513-8898-238e4d542b60"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -171,7 +171,7 @@
 				<text><![CDATA[Z-score]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="388" y="180" width="135" height="20" uuid="de920664-3832-4426-a0f8-921b7516b5fb"/>
+				<reportElement x="375" y="180" width="148" height="20" uuid="de920664-3832-4426-a0f8-921b7516b5fb"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -183,7 +183,7 @@
 				<text><![CDATA[Risco de Fraturas]]></text>
 			</staticText>
 			<staticText>
-				<reportElement positionType="Float" x="0" y="280" width="523" height="40" uuid="1e28667b-f733-4844-873b-aa4d951b9f6f"/>
+				<reportElement x="0" y="280" width="523" height="40" uuid="1e28667b-f733-4844-873b-aa4d951b9f6f"/>
 				<box topPadding="2"/>
 				<textElement textAlignment="Justified">
 					<font size="8"/>
@@ -191,20 +191,20 @@
 				<text><![CDATA[*O risco de fraturas "sítio específico" de coluna lombar, fêmur e antebraço é estimado a partir da comparação com a massa óssea de indivíduos jovens saudáveis]]></text>
 			</staticText>
 			<staticText>
-				<reportElement positionType="Float" x="0" y="320" width="75" height="20" uuid="0ff83d2e-37c7-44ad-bdbd-4b08c9922bce"/>
+				<reportElement x="0" y="320" width="75" height="20" uuid="0ff83d2e-37c7-44ad-bdbd-4b08c9922bce"/>
 				<textElement verticalAlignment="Middle">
 					<font isBold="true" pdfFontName="Helvetica-Bold"/>
 				</textElement>
 				<text><![CDATA[CONCLUSÃO: ]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement positionType="Float" x="75" y="320" width="448" height="20" uuid="cfd6e85a-77f5-4f20-b795-3d1722607afc"/>
+				<reportElement x="75" y="320" width="448" height="20" uuid="cfd6e85a-77f5-4f20-b795-3d1722607afc"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$P{conclusao}]]></textFieldExpression>
 			</textField>
 			<elementGroup>
 				<textField>
-					<reportElement stretchType="RelativeToTallestObject" x="0" y="200" width="178" height="20" uuid="0c3fe908-f3cb-4e4a-b401-f1df01136404"/>
+					<reportElement x="0" y="200" width="165" height="20" uuid="0c3fe908-f3cb-4e4a-b401-f1df01136404"/>
 					<box leftPadding="5">
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -215,7 +215,7 @@
 					<textFieldExpression><![CDATA["Coluna Lombar " + $P{vertebras}]]></textFieldExpression>
 				</textField>
 				<textField pattern="###0.000;-###0.000" isBlankWhenNull="true">
-					<reportElement stretchType="RelativeToTallestObject" x="178" y="200" width="110" height="20" uuid="6cdcf895-22bb-4910-b16e-1e746d3354af"/>
+					<reportElement x="165" y="200" width="110" height="20" uuid="6cdcf895-22bb-4910-b16e-1e746d3354af"/>
 					<box>
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -226,7 +226,7 @@
 					<textFieldExpression><![CDATA[$P{colunaLombarDensidade}]]></textFieldExpression>
 				</textField>
 				<textField pattern="###0.0;-###0.0" isBlankWhenNull="true">
-					<reportElement stretchType="RelativeToTallestObject" x="288" y="200" width="50" height="20" uuid="ea7d6671-c712-4f30-9ab6-c8e65a117055"/>
+					<reportElement x="275" y="200" width="50" height="20" uuid="ea7d6671-c712-4f30-9ab6-c8e65a117055"/>
 					<box>
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -239,7 +239,7 @@
 					<textFieldExpression><![CDATA[$P{colunaLombarTScore}]]></textFieldExpression>
 				</textField>
 				<textField pattern="###0.0;-###0.0" isBlankWhenNull="true">
-					<reportElement stretchType="RelativeToTallestObject" x="338" y="200" width="50" height="20" uuid="41f1d4de-67a8-4b65-820d-2657be71413a"/>
+					<reportElement x="325" y="200" width="50" height="20" uuid="41f1d4de-67a8-4b65-820d-2657be71413a"/>
 					<box>
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -249,9 +249,9 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$P{colunaLombarZScore}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement stretchType="RelativeToTallestObject" x="388" y="200" width="135" height="20" uuid="3635a397-402e-4d29-8929-b220ae8b8aa8"/>
-					<box>
+				<textField isBlankWhenNull="true">
+					<reportElement x="375" y="200" width="148" height="20" uuid="3635a397-402e-4d29-8929-b220ae8b8aa8"/>
+					<box topPadding="0">
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
 						<bottomPen lineWidth="1.0"/>
@@ -274,7 +274,7 @@
 			</elementGroup>
 			<elementGroup>
 				<staticText>
-					<reportElement positionType="Float" x="0" y="220" width="178" height="20" uuid="1681e7d8-433a-43a0-9942-29e5655e6f83"/>
+					<reportElement x="0" y="220" width="165" height="20" uuid="1681e7d8-433a-43a0-9942-29e5655e6f83"/>
 					<box leftPadding="5">
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -285,7 +285,7 @@
 					<text><![CDATA[Colo do Fêmur]]></text>
 				</staticText>
 				<textField pattern="###0.000;-###0.000" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="178" y="220" width="110" height="20" uuid="f1d8ad50-d2e4-45ac-9f42-e131ff7ed58c"/>
+					<reportElement x="165" y="220" width="110" height="20" uuid="f1d8ad50-d2e4-45ac-9f42-e131ff7ed58c"/>
 					<box>
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -296,7 +296,7 @@
 					<textFieldExpression><![CDATA[$P{coloFemurDensidade}]]></textFieldExpression>
 				</textField>
 				<textField pattern="###0.0;-###0.0" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="288" y="220" width="50" height="20" uuid="844aeeeb-0660-411e-8f7b-9b61677b8f64"/>
+					<reportElement x="275" y="220" width="50" height="20" uuid="844aeeeb-0660-411e-8f7b-9b61677b8f64"/>
 					<box>
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -309,7 +309,7 @@
 					<textFieldExpression><![CDATA[$P{coloFemurTScore}]]></textFieldExpression>
 				</textField>
 				<textField pattern="###0.0;-###0.0" isBlankWhenNull="true">
-					<reportElement positionType="Float" x="338" y="220" width="50" height="20" uuid="f68666c7-2e99-43d8-be2c-d884c023adb1"/>
+					<reportElement x="325" y="220" width="50" height="20" uuid="f68666c7-2e99-43d8-be2c-d884c023adb1"/>
 					<box>
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -320,7 +320,7 @@
 					<textFieldExpression><![CDATA[$P{coloFemurZScore}]]></textFieldExpression>
 				</textField>
 				<staticText>
-					<reportElement positionType="Float" x="388" y="220" width="135" height="20" uuid="99bb8743-d601-4fe4-b0ee-ddd0c978bf7b"/>
+					<reportElement x="375" y="220" width="148" height="20" uuid="99bb8743-d601-4fe4-b0ee-ddd0c978bf7b"/>
 					<box>
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -335,7 +335,7 @@
 			</elementGroup>
 			<elementGroup>
 				<staticText>
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="240" width="178" height="20" uuid="8055d43d-9092-4a9f-a346-5f8a8020f426"/>
+					<reportElement stretchType="RelativeToTallestObject" x="0" y="240" width="165" height="20" uuid="8055d43d-9092-4a9f-a346-5f8a8020f426"/>
 					<box leftPadding="5">
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -346,7 +346,7 @@
 					<text><![CDATA[Fêmur Total]]></text>
 				</staticText>
 				<textField pattern="###0.000;-###0.000" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="178" y="240" width="110" height="20" uuid="5fa19a57-5bc7-4827-a14f-606f4d603dce"/>
+					<reportElement stretchType="RelativeToTallestObject" x="165" y="240" width="110" height="20" uuid="5fa19a57-5bc7-4827-a14f-606f4d603dce"/>
 					<box>
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -357,7 +357,7 @@
 					<textFieldExpression><![CDATA[$P{femurTotalDensidade}]]></textFieldExpression>
 				</textField>
 				<textField pattern="###0.0;-###0.0" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="288" y="240" width="50" height="20" uuid="196ec721-d97c-4407-9f1d-fdc7ed304895"/>
+					<reportElement stretchType="RelativeToTallestObject" x="275" y="240" width="50" height="20" uuid="196ec721-d97c-4407-9f1d-fdc7ed304895"/>
 					<box>
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -370,7 +370,7 @@
 					<textFieldExpression><![CDATA[$P{femurTotalTScore}]]></textFieldExpression>
 				</textField>
 				<textField pattern="###0.0;-###0.0" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="338" y="240" width="50" height="20" uuid="a1b24b08-09a0-4f1c-af37-35489a4e42e9"/>
+					<reportElement stretchType="RelativeToTallestObject" x="325" y="240" width="50" height="20" uuid="a1b24b08-09a0-4f1c-af37-35489a4e42e9"/>
 					<box>
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -380,8 +380,8 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$P{femurTotalZScore}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="388" y="240" width="135" height="20" uuid="57c66231-56e3-4938-a75a-cd7e72a0f857"/>
+				<textField isBlankWhenNull="true">
+					<reportElement stretchType="RelativeToTallestObject" x="375" y="240" width="148" height="20" uuid="57c66231-56e3-4938-a75a-cd7e72a0f857"/>
 					<box>
 						<topPen lineWidth="0.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -405,7 +405,7 @@
 			</elementGroup>
 			<elementGroup>
 				<staticText>
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="260" width="178" height="20" uuid="a03287fc-775c-4c71-a7da-34d8d7636e76"/>
+					<reportElement x="0" y="260" width="165" height="20" uuid="a03287fc-775c-4c71-a7da-34d8d7636e76"/>
 					<box leftPadding="5">
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -416,7 +416,7 @@
 					<text><![CDATA[Rádio 33%]]></text>
 				</staticText>
 				<textField pattern="###0.000;-###0.000" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="178" y="260" width="110" height="20" uuid="5f4d9470-3178-45b4-867b-d9cc31e8524e"/>
+					<reportElement x="165" y="260" width="110" height="20" uuid="5f4d9470-3178-45b4-867b-d9cc31e8524e"/>
 					<box>
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -427,7 +427,7 @@
 					<textFieldExpression><![CDATA[$P{radioTercoDensidade}]]></textFieldExpression>
 				</textField>
 				<textField pattern="###0.0;-###0.0" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="288" y="260" width="50" height="20" uuid="6b99e527-9531-4dee-92ed-b5fb479ff90c"/>
+					<reportElement x="275" y="260" width="50" height="20" uuid="6b99e527-9531-4dee-92ed-b5fb479ff90c"/>
 					<box>
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -440,7 +440,7 @@
 					<textFieldExpression><![CDATA[$P{radioTercoTScore}]]></textFieldExpression>
 				</textField>
 				<textField pattern="###0.0;-###0.0" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="338" y="260" width="50" height="20" uuid="d8e8ac80-7b7e-4516-807e-e608a975c721"/>
+					<reportElement x="325" y="260" width="50" height="20" uuid="d8e8ac80-7b7e-4516-807e-e608a975c721"/>
 					<box>
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
@@ -450,8 +450,8 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle"/>
 					<textFieldExpression><![CDATA[$P{radioTercoZScore}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="388" y="260" width="135" height="20" uuid="85a7a39f-b434-4663-a5d9-84358f8d41fc"/>
+				<textField isBlankWhenNull="true">
+					<reportElement x="375" y="260" width="148" height="20" uuid="85a7a39f-b434-4663-a5d9-84358f8d41fc"/>
 					<box>
 						<topPen lineWidth="1.0"/>
 						<leftPen lineWidth="1.0"/>
