--- a/coi-management-web/src/main/resources/pagamentos.jrxml
+++ b/coi-management-web/src/main/resources/pagamentos.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="pagamentos" pageWidth="500" pageHeight="100" orientation="Landscape" columnWidth="500" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" isIgnorePagination="true" uuid="580f0f51-3f9e-4c83-9233-2e8a9ccc74c0">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="pagamentos" pageWidth="800" pageHeight="100" orientation="Landscape" columnWidth="800" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" isIgnorePagination="true" uuid="580f0f51-3f9e-4c83-9233-2e8a9ccc74c0">
 	<property name="ireport.zoom" value="1.0"/>
-	<property name="ireport.x" value="0"/>
+	<property name="ireport.x" value="93"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="tipo" class="java.lang.String"/>
 	<parameter name="inicio" class="java.util.Date"/>
@@ -20,6 +20,7 @@
 	<field name="agencia" class="java.lang.String"/>
 	<field name="conta" class="java.lang.String"/>
 	<field name="cheque" class="java.lang.String"/>
+	<field name="documento" class="java.lang.String"/>
 	<variable name="total" class="java.math.BigDecimal" calculation="Sum">
 		<variableExpression><![CDATA[$F{valor}]]></variableExpression>
 	</variable>
@@ -28,7 +29,7 @@
 		<groupHeader>
 			<band height="20">
 				<textField>
-					<reportElement x="0" y="0" width="500" height="20" uuid="ae5c5ffa-3f12-4623-90db-c2ff641ceaa5"/>
+					<reportElement x="0" y="0" width="800" height="20" uuid="ae5c5ffa-3f12-4623-90db-c2ff641ceaa5"/>
 					<box>
 						<leftPen lineWidth="0.5"/>
 						<rightPen lineWidth="0.5"/>
@@ -44,7 +45,7 @@
 	<title>
 		<band height="20" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="500" height="20" uuid="b6ac11df-0194-4183-9ea7-96c16c60d70c"/>
+				<reportElement x="0" y="0" width="800" height="20" uuid="b6ac11df-0194-4183-9ea7-96c16c60d70c"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none"/>
 				<textFieldExpression><![CDATA["CONTAS " + $P{tipo} + " NO PERÍODO DE " + new SimpleDateFormat("dd/MM/yyyy").format($P{inicio}) + " A " + new SimpleDateFormat("dd/MM/yyyy").format($P{fim})]]></textFieldExpression>
 			</textField>
@@ -77,7 +78,7 @@
 				<text><![CDATA[Vencimento]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="400" y="0" width="100" height="20" uuid="1bee2e91-8088-4f45-ab13-ec523a3170bd"/>
+				<reportElement x="700" y="0" width="100" height="20" uuid="1bee2e91-8088-4f45-ab13-ec523a3170bd"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -87,6 +88,30 @@
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none"/>
 				<text><![CDATA[Valor]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="400" y="0" width="100" height="20" uuid="2dd82e4e-c57f-409f-9448-8d40ef63fe39"/>
+				<box>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none"/>
+				<text><![CDATA[Pagamento]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="500" y="0" width="200" height="20" uuid="763498cc-ad9e-4642-ae8b-3334332b7b97"/>
+				<box>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle" markup="none"/>
+				<text><![CDATA[Documento]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
@@ -117,7 +142,7 @@
 				<textFieldExpression><![CDATA[$F{vencimento}]]></textFieldExpression>
 			</textField>
 			<textField pattern="¤ #,##0.00">
-				<reportElement x="400" y="0" width="100" height="20" uuid="269828d5-6698-427b-bf66-5c2f47748332"/>
+				<reportElement x="700" y="0" width="100" height="20" uuid="269828d5-6698-427b-bf66-5c2f47748332"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -128,12 +153,36 @@
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{valor}]]></textFieldExpression>
 			</textField>
+			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
+				<reportElement x="400" y="0" width="100" height="20" uuid="78f51864-ea98-4860-b507-c35b70ef9760"/>
+				<box>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{pagamento}]]></textFieldExpression>
+			</textField>
+			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
+				<reportElement x="500" y="0" width="200" height="20" uuid="bed1d4db-c469-4cfc-8660-9364b0390cb7"/>
+				<box>
+					<pen lineWidth="0.5"/>
+					<topPen lineWidth="0.5"/>
+					<leftPen lineWidth="0.5"/>
+					<bottomPen lineWidth="0.5"/>
+					<rightPen lineWidth="0.5"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{documento}]]></textFieldExpression>
+			</textField>
 		</band>
 	</detail>
 	<summary>
 		<band height="20">
 			<staticText>
-				<reportElement x="0" y="0" width="400" height="20" uuid="74f16da5-bf21-49e3-b211-a0f6943a6958"/>
+				<reportElement x="0" y="0" width="700" height="20" uuid="74f16da5-bf21-49e3-b211-a0f6943a6958"/>
 				<box rightPadding="2">
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
@@ -147,7 +196,7 @@
 				<text><![CDATA[Total:]]></text>
 			</staticText>
 			<textField pattern="¤ #,##0.00">
-				<reportElement x="400" y="0" width="100" height="20" uuid="0cc1cd26-9ae4-4f82-8e8d-971b1f276b7c"/>
+				<reportElement x="700" y="0" width="100" height="20" uuid="0cc1cd26-9ae4-4f82-8e8d-971b1f276b7c"/>
 				<box>
 					<pen lineWidth="0.5"/>
 					<topPen lineWidth="0.5"/>
